<!-- Copyright 2021 Nicholas Hochstetler
   ~ You may not use this file except in compliance with the Apache License
   ~ Version 2.0, obtainable at http://www.apache.org/licenses/LICENSE-2.0
   ~ or in the file LICENSE in the project's root directory. -->

<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_height="wrap_content"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
    tools:background="@drawable/list_item_selected"
    tools:paddingVertical="4dp" >

    <com.cliffracertech.bootycrate.view.TintableCheckbox
        android:id="@+id/checkBox"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toStartOf="@id/nameEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/checkBoxExtraInfoBottomBarrier"
        tools:tint="@color/list_item_color_red"
        style="@style/ListItemColorEdit" />

    <com.cliffracertech.bootycrate.view.AnimatedStrikeThroughTextFieldEdit
        android:id="@+id/nameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/amountEdit"
        app:layout_constraintStart_toEndOf="@id/checkBox"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/extraInfoEdit"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Item Name"
        tools:minHeight="@dimen/editable_text_field_min_height"
        style="@style/ListItemNameEdit" />

    <com.cliffracertech.bootycrate.view.AnimatedStrikeThroughTextFieldEdit
        android:id="@+id/extraInfoEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/nameEdit"
        app:layout_constraintStart_toStartOf="@id/nameEdit"
        app:layout_constraintTop_toBottomOf="@id/nameEdit"
        app:layout_constraintBottom_toBottomOf="@id/checkBoxExtraInfoBottomBarrier"
        tools:text="Extra info"
        tools:minHeight="@dimen/editable_text_field_min_height"
        style="@style/ListItemExtraInfoEdit" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/checkBoxExtraInfoBottomBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="checkBox, extraInfoEdit"
        app:barrierDirection="bottom" />

    <com.cliffracertech.bootycrate.view.AnimatedIntegerEdit
        android:id="@+id/amountEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/nameEdit"
        app:layout_constraintEnd_toStartOf="@id/amountEditSpacer"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_height="@dimen/editable_text_field_min_height"
        tools:valueIsFocusable="true"
        style="@style/ListItemAmountEdit" />

<!-- The amountEditSpacer, because it is the same width as the editButton, allows
     the amount edit look as though it is constrained to the start of the edit
     button when the view is collapsed, but still move to the right edge of the
     view when the view is expanded and the edit button moves down. -->
    <android.widget.Space
        android:id="@+id/amountEditSpacer"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        tools:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/edit_button_description"
        style="@style/ListItemEditButton" />

    <!-- The link indicator is positioned in the top row of the view and has
         its translationY set so that it appears in the bottom row. This is
         done so that it doesn't interfere with the collapse animation.-->
    <ImageView
        android:id="@+id/linkIndicator"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toStartOf="@id/editButton"
        app:layout_constraintTop_toTopOf="parent"
        android:translationY="24dp"
        android:alpha="0"
        android:visibility="gone"
        tools:translationY="48dp"
        tools:alpha="1"
        tools:visibility="visible"
        android:contentDescription="@string/link_status_description"
        style="@style/ShoppingListItemLinkIndicator" />

    <!-- amountEditLabel is intended as a label for the amount edit.
         -3 for height and width is a workaround to make the view
         actually zero sized (since 0dp will make it auto-sized instead). -->
    <TextView
        android:id="@+id/amountEditLabel"
        android:layout_width="-3dp"
        android:layout_height="-3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/item_amount_description"
        android:labelFor="@id/valueEdit" />

</merge>