<!-- Copyright 2021 Nicholas Hochstetler
   ~ You may not use this file except in compliance with the Apache License
   ~ Version 2.0, obtainable at http://www.apache.org/licenses/LICENSE-2.0
   ~ or in the file LICENSE in the project's root directory. -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp" >

    <FrameLayout
        android:id="@+id/newItemViewContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="6dp"
        tools:layout_height="110dp" />

    <ViewStub
        android:id="@+id/itemGroupPickerStub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout="@layout/selected_item_group_picker" />

    <TextView
        android:id="@+id/warningMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:visibility="visible"
        tools:text="@string/new_item_no_name_error"
        tools:drawableStart="@drawable/ic_baseline_error_24"
        style="@style/AddNewItemDialogMessage" />

</LinearLayout>